# URDF_Parser

./: CMakeLists.txt  README.md
include/urdf/: geometry.h  link.h  model.h
src/: common.cpp  model.cpp  tinyxmlparser.cpp
test/: arm_v2.urdf  arm_v4.urdf  load_file.cpp  parse_simple.cpp  test.urdf
